Changed navbar and footer to flexbox, and fixed footer text cutoff issue

--- a/styles.css
+++ b/styles.css
@@ -1,25 +1,25 @@
+* {
+    box-sizing: border-box;
+}
+
 :root {
     font-family: Arial, sans-serif;
 }
 
 nav {
-    display: block;
-    padding: 25px 10px 40px 10px;
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    padding: 10px 10px 0px 10px;
 }
 
+
 .navigation-link {
+    display: inline-block;
     font-size: 13px;
     padding: 0px 10px 0px 10px;
     text-decoration: none;
     color: #494949;
-}
-
-.float-left {
-    float: left;
-}
-
-.float-right {
-    float: right;
 }
 
 a:hover {
@@ -27,13 +27,11 @@ a:hover {
 }
 
 #sign-in {
-    position: relative;
     background-color: #4285f4;
     font-weight: bold;
     color: white;
     padding: 8px 12px 8px 12px;
     margin-left: 10px;
-    bottom: 8px;
     border: none;
     border-radius: 4px;;
 }
@@ -97,10 +95,22 @@ a:hover {
 
 footer {
     position: fixed;
-    width: 100%;
-    left: 0;
     bottom: 0;
-    padding: 20px;
+    left: 0;
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    padding: 10px 10px 0px 10px;
+}
+
+footer {
+    position: fixed;
+    bottom: 0;
+    left: 0;
+    width: 100%;
+    display: flex;
+    justify-content: space-between;
+    padding: 12px 20px;
     background-color: #f2f2f2;
     border-top: 1px solid #e6e6e6;
 }
@@ -164,6 +174,7 @@ footer {
     transform: scale(var(--ggs,1));
     width: 16px;
     height: 16px;
+    top: 4px;
    }
    
    .gg-menu-grid-r::before {
